--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,58 @@
+
 html,
 body {
-  padding: 0;
-  margin: 0;
+  padding: 1rem;
+
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.header {
+  margin: 20px;
 }
+
+
 
 * {
   box-sizing: border-box;
+  /* font-family: "Lucida Console", "Courier New", monospace; */
+}
+
+
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: rgb(209, 209, 209);
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  list-style-type: none;
+  margin: 10;
+  padding: 5;
+  overflow: hidden;
+  background-color: transparent;
+}
+
+nav ul li {
+  margin-right: 20px;
 }
